fix: do not use removeFirst() api